# portfolio-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  sqlx-data.json
scripts/: init.ps1  init.sql
src/: configuration.rs  lib.rs  main.rs
src/routes/: about.rs  career.rs  mod.rs  skill.rs  skills.rs
